--- a/index.css
+++ b/index.css
@@ -8,21 +8,21 @@
     --card--color-primary: #f7dd43;
     --card-title-border-color: #746615; 
     --card-bg-color: #1d1c19;
-    --bg: url(./assets/bg-yellow.svg);
+    --bg: url(./background.jpg);
 }
 
 body.blue {
     --card--color-primary: #338AF3;
     --card-title-border-color: #338AF3; 
     --card-bg-color: #202024;
-    --bg: url(./assets/bg-blue.svg);
+    --bg: url(./background.jpg);
 }
 
 body.green {
     --card--color-primary: #047C3F;
     --card-title-border-color: #047C3F; 
     --card-bg-color: #1A1F1B;
-    --bg: url(./assets/bg-green.svg);
+    --bg: url(./background.jpg);
 }
 
 ul {
@@ -34,8 +34,8 @@ body {
     background-color: #121214;
     background-image: var(--bg);
     background-position: top center;
-    background-repeat: no-repeat;
-    background-size: contain;
+    background-repeat: repeat;
+    background-size:100%;
 }
 
 body * {
@@ -45,7 +45,7 @@ body * {
 #app {
     width: fit-content;
     margin: auto;
-    padding-top: 52px;
+    padding-top: 20px;
 }
 
 
@@ -54,14 +54,13 @@ body * {
     text-align: center;
     color:  #E1E1E6;
     display: flex;
-    padding: 8px 16px;
     width: fit-content;
-    margin: auto;
+    margin: -10px auto;
     font-size: 28px;
 }
 
 .ray_logo {
-    padding: 10px;
+    padding: 2px;
 }
 
 .ray_logo img { 
